--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ click-repl==0.3.0
 constantly==23.10.4
 cryptography==43.0.0
 daphne==4.1.2
-uvicorn
+uvicorn[standard]
 Django==4.2
 djangorestframework==3.15.2
 docker==7.1.0
